# tars

./: .gitignore  bun.lockb  package.json  sign-and-run.sh  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/actions/: llm.tsx
src/components/: ModelSelector.tsx  ResponseSection.tsx  StoreToDB.tsx
src/utils/: MarkdownRenderer.tsx  prompts.ts
